Update Swagger spec for chartIcon
